--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,33 @@
+# Core ML
 tensorflow==2.12.0
-pandas 
-gdown
-dvc
+numpy==1.23.5
+scipy==1.10.1
+joblib==1.3.2
+
+# Data handling
+pandas==1.5.3
+matplotlib==3.7.3
+seaborn==0.12.2
+
+# MLOps & Experiment tracking
 mlflow==2.2.2
-notebook
-numpy
-matplotlib
-seaborn
+dvc==2.58.2
+dagshub==0.3.14
+
+# Utilities
+gdown==4.7.1
+tqdm==4.66.1
+pyYAML==6.0.1
 python-box==6.0.2
-pyYAML
-tqdm
 ensure==1.0.2
-joblib
-types-PyYAML
-scipy
-Flask
-Flask-Cors
-dagshub
+types-PyYAML==6.0.12.12
+
+# API / App
+Flask==2.2.5
+Flask-Cors==3.0.10
+
+# Dev / notebooks (safe to keep)
+notebook==7.0.6
+
+# Local package
 -e .
